relacion al index

--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     </header>
     <section>
         <img src="https://randomuser.me/api/portraits/women/78.jpg" alt="Foto retrato de la persona del cv">
-        <button onclick="location.href='indexCV.html'">Volver al inicio</button>
+        <button onclick="location.href='index.html'">Volver al inicio</button>
 </section>
     
 <main>
